# hpc-project

./: CMakeLists.txt  README.md  lv_conf_cache.h  lv_conf_no_cache.h
docs/: presentation.typ  report.typ  title.typ
src/: main.c
